--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 BASE_URL="http://localhost:3000"
 
 # Database
-DATABASE_URL="postgresql://postgres:123456789@localhost:5432/template"
+DATABASE_URL="mongodb+srv://admin:<db_password>@url.mongodb.net/?retryWrites=true&w=majority&appName=list"
