--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "db:studio": "prisma studio",
+    "db:push": "prisma db push",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.1",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "mongoose": "^8.8.4",
+    "bcryptjs": "^2.4.3",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +34,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   }
